# wit-bindgen

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
benchmarks/: Cargo.toml  Makefile
benchmarks/benchmark/: fib.c  fib.rs  fib_nowit.rs  string_dynamic.c  string_dynamic.rs  string_dynamic_nowit.rs  string_static.c  string_static.rs  string_static_nowit.rs
benchmarks/natives/: fib_native.c  run.sh  string_dynamic_native.c  string_static_native.c
benchmarks/output/: Fib.h  fib.json
benchmarks/src/: main.rs
crates/api/: Cargo.toml
crates/api/src/: bindgen.rs  lib.rs  runtime.rs
crates/c-api/: Makefile  wit-bindgen.c
crates/c-api/include/: wasmtime.h  wit-bindgen.h
examples/: run_example.sh  say_hello.c  say_hello.rs  struct_test.wasm
examples/include/: say_hello.h
src/: main.rs
tests/: interface-types.rs  workflow.rs
tests/interface_types/: defer_call.rs  empty.rs  integers.rs  integers.wat  memory_to_string.rs  mod.rs  no_wasm.rs  string_to_memory.rs
tests/struct_export/: Fib.h  fib.c  fib.json  fib.rs
tests/workflow_test/: mod.rs
