[package]
name = "wit-bindgen"
version = "0.1.0"
authors = ["Yu Xingzi <897544902@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = { path = "crates/wasmtime/crates/api" }
anyhow = "1.0.19"
structopt = "0.3.21"