[package]
name = "wit-bindgen"
version = "0.1.0"
authors = ["Yu Xingzi <897544902@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.19"
structopt = "0.3.21"
rayon = "1.0"
wasm-bindgen-cli-support = { path = "crates/wasm-bindgen/crates/cli-support", version = "=0.2.73" }
wasmtime = { path = "crates/wasmtime/crates/api", version = "0.12.0" }
wit-api = { path = "crates/api", version = "0.1.0" }

[dev-dependencies]
assert_cmd = "1.0"

[workspace]
members = [
    "benchmarks",
    "crates/api",
]
exclude = [
    "crates/wasmtime",
    "crates/wasm-bindgen",
]